<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.aadam.befit.uiModules.LoggedIn.SessionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|bottom"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/time_0"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|bottom"
        android:text="@string/steps"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView_steps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|bottom"
        android:text="@string/distance"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView_distance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0_miles"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView_startSession"
        style="@style/CustomButton"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_session" />

</LinearLayout>
