<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".uiModules.LoggedOut.DetailActivity">


    <!--Name-->
    <EditText
        android:id="@+id/nameEditText"
        style="@style/CustomTextField"
        android:hint="@string/full_name" />

    <!--Height-->
    <Spinner
        android:id="@+id/spinner_height"
        style="@style/CustomTextField"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />


    <!--Gender-->
    <Spinner
        android:id="@+id/spinner_gender"
        style="@style/CustomTextField"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />

    <!--Continue-->
    <TextView
        android:id="@+id/continueAction"
        style="@style/CustomButton"
        android:onClick="onClick"
        android:text="@string/continue_text" />

    <!--Alert-->
    <TextView
        android:id="@+id/alert"
        style="@style/AlertTextView"
        android:alpha="0"
        android:text="@string/alert" />


</LinearLayout>
