<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <!-- Content View-->
    <LinearLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <!-- Logo-->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/logo" />

        <!-- Text-->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:lineSpacingExtra="13dp"
            android:text="@string/text_splashscreen"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <!-- Twitter-->
        <LinearLayout
            android:id="@+id/button_twitter_login"
            android:layout_width="285dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_shape"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:paddingLeft="16.5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/twitter_icon" />

            <TextView
                android:id="@+id/twitterTextView"
                style="@style/CustomButtonWithIcon"
                android:text="@string/button_twitter_login" />

        </LinearLayout>

        <!-- Bottom Buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpAction"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/textView_sign_up"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="or"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/logInAction"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/textView_login"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>